--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -17,6 +17,7 @@
   gap: 30px;
   align-items: center;
   margin-bottom: 40px;
+  min-height: 270px;
 }
 
 .avatar {
